# psfFit

./: CMakeLists.txt  main.cpp
PSF/: psf.cpp  psf.h
RawSpectra/: rawSpectra.cpp  rawSpectra.h
